EAD_FE_CA2/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipe-app
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: ead-ca2
