EAD_FE_CA2/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-fe
  namespace: recipe-app
  labels:
    app: recipe-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipe-fe
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: recipe-fe
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: fe
          image: ghcr.io/nilavanluna/ead-ca2-2026/ead-ca2-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 22137
          resources:
            requests:
              cpu: '50m'
              memory: '128Mi'
            limits:
              cpu: '200m'
              memory: '256Mi'
          livenessProbe:
            httpGet:
              path: /
              port: 22137
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 22137
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: recipe-fe-service
  namespace: recipe-app
spec:
  selector:
    app: recipe-fe
  ports:
    - port: 80
      targetPort: 22137
  type: LoadBalancer
